kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portfolio
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: thibaultcne/portfolio
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  namespace: portfolio
  name: portfolio
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    app: portfolio
status:
  loadBalancer: {}

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: portfolio
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: thibault-cne.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 8080
  tls:
    - secretName: portfolio-tls
      hosts:
        - thibault-cne.fr
